--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "bigi": "^1.4.2",
     "bitcoinjs-lib": "^1.5.8",
+    "bootstrap": "^3.3.7",
     "browserify": "^13.1.1",
     "bs58": "^3.0.0",
     "buffer": "^5.0.0",
